kubernetes/apps/admin/pomerium/service-patch.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: pomerium-proxy
  namespace: pomerium
  annotations:
    kube-vip.io/loadbalancerIPs: 192.168.0.222
spec:
  loadBalancerIP: 192.168.0.222
