kubernetes/apps/admin/pomerium/envoy-admin.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: envoy
  namespace: pomerium
spec:
  type: ExternalName
  externalName: 'localhost'
  ports:
    - protocol: TCP
      name: admin
      port: 9901
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: envoy
  namespace: pomerium
  annotations:
    ingress.pomerium.io/allowed_domains: "[${domain}]"
spec:
  ingressClassName: pomerium
  rules:
    - host: 'envoy.joshwolfe.ca'
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: envoy
                port:
                  name: admin
